<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/primaryColor"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="85dp"
        android:layout_height="66dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:fontFamily="@font/akaya_telivigala"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/material_dynamic_primary10"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/nav_user_email"
        android:layout_width="378dp"
        android:layout_height="38dp"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>